--- a/Week-2/Exercise-2.2/index.html
+++ b/Week-2/Exercise-2.2/index.html
@@ -9,16 +9,19 @@
   </head>
   <body>
     <div class="main-box">
-      <div class="boxes-top">
-        <div class="box-1"></div>
-        <div class="box-2"></div>
-      </div>
-      <div class="boxes-bottom">
-        <div class="box-3"></div>
-        <div class="box-4"></div>
-      </div>
+    <div class="all-boxes">
+        <div class="boxes-top">
+            <div class="box-1 box"></div>
+            <div class="box-3 box "></div>
+          </div>
+          <div class="boxes-bottom">
+            
+            <div class="box-2 box"></div>
+            <div class="box-4 box"></div>
+          </div>
+    </div>
 
-      <h2>Hi!</h2>
+      <h2 class="hi">Hi!</h2>
     </div>
   </body>
 </html>
